new commit on about branch

--- a/index.html
+++ b/index.html
@@ -9,5 +9,13 @@
 </head>
 <body>
   <p>Git + GitHub</p>
+  <h1>heading</h1>
+  <p>
+    lorem
+    lorem
+    lorem
+    lorem
+    lorem
+  </p>
 </body>
 </html>
